--- a/templates/dashboard_app/dashboard.html
+++ b/templates/dashboard_app/dashboard.html
@@ -19,13 +19,13 @@
     {% endif %}
 
     <header class="top-header">
-        <div class="top-header-brand">
+        <a href="{% url 'dashboard' %}" class="top-header-brand">
             <img src="{% static 'dashboard_app/img/logo.png' %}" alt="Логотип Метрика" class="brand-logo">
             <div class="brand-text">
                 <span class="brand-name">Метрика</span>
                 <span class="brand-tagline">аналитическая платформа</span>
             </div>
-        </div>
+        </a>
         <div class="top-header-search">
             <div class="search-container">
                 <svg class="search-icon" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -157,10 +157,10 @@
                     <div class="stat-icon-dark">
                         <img src="{% static 'dashboard_app/img/icon_2.png' %}" alt="Количество работников">
                     </div>
-                    <h3 class="stat-title-dark">Количество Работников</h3>
+                    <h3 class="stat-title-dark">Средняя численность работников</h3>
                     <p class="stat-value-dark">
                         {% if dataset_stats.avg_staff %}
-                            {{ dataset_stats.avg_staff|floatformat:1 }}
+                            {{ dataset_stats.avg_staff|floatformat:0|intcomma }}
                         {% else %}
                             —
                         {% endif %}
@@ -365,7 +365,7 @@
                 <span>2025 Метрика, официальный сайт</span>
             </div>
             <div class="footer-center">
-                <img src="{% static 'dashboard_app/img/copyright.png' %}" alt="Геолокация" class="footer-icon">
+                <img src="{% static 'dashboard_app/img/footer_icon.png' %}" alt="Геолокация" class="footer-icon">
                 <span>Г. Краснодар</span>
             </div>
             <div class="footer-right">
