--- a/templates/dashboard_app/report.html
+++ b/templates/dashboard_app/report.html
@@ -1,8 +1,10 @@
+{% load static %}
 {% load humanize %}
 <!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="{% static 'dashboard_app/img/logo.png' %}">
     <title>Отчёт по компаниям</title>
     <style>
         body {
