--- a/templates/dashboard_app/login.html
+++ b/templates/dashboard_app/login.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="{% static 'dashboard_app/img/logo.png' %}">
     <title>Вход в систему</title>
     <style>
         * {
